Archive2/a9/ffcc3c6cf6cd5f/output
main.cpp: In function 'int main()':
main.cpp:10:18: error: 'DOMAIN' was not declared in this scope
     std::cout << DOMAIN << std::endl;
                  ^
